--- a/main.css
+++ b/main.css
@@ -26,8 +26,10 @@ a:hover {
 }
 
 .container {
+    margin: 0 auto;
     text-align: center;
     padding-top: 24px;
+    max-width: 1000px;
 }
 
 .splash {
