--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -3,24 +3,71 @@
     -moz-box-sizing:border-box;
     -ms-box-sizing:border-box;
     box-sizing:border-box;
-    background-color: #FFFFFF;
     font-family: 'Open Sans', sans-serif;
+    color: #fff;
 }
 
-/* unvisited link */
-a:link {
-    color: black;
+html {
+    position: relative;
+    min-height: 100%;
 }
 
-/* visited link */
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
 a:visited {
-    color: black;
+    color: #000;
 }
 
-a:hover {
-    color: #1A237E;
+.banner {
+    margin: 30px auto 50px;
+}
+
+.banner .card h1 {
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 10px;
+    font-size: 36px;
+}
+
+.banner .sidebox {
+    padding-top: 30px;
+    padding-left: 40px;
+}
+
+.banner .sidebox a:link,
+.thing a:link {
+    color: #000;
+}
+
+.section-header {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.page-section {
+    margin-bottom: 60px;
 }
 
 .thing {
     width: 200px;
+}
+
+#contacts img {
+    width: 80px;
+}
+
+#resumeLink {
+    margin: 30px auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 180px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
 }
