--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -21,8 +21,15 @@ a:visited {
     color: #000;
 }
 
+@media (min-width: 992px) {
+    .banner {
+        height: 100vh;
+        padding-top: 10vh;
+    }
+}
+
 .banner {
-    margin: 30px auto 50px;
+    padding: 30px auto 50px;
 }
 
 .banner .card h1 {
@@ -55,6 +62,7 @@ a:visited {
 
 #contacts img {
     width: 80px;
+    border-radius: 50%;
 }
 
 #resumeLink {
