--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
 	-ms-box-sizing:border-box;
 	box-sizing:border-box;
 	font-family: 'Open Sans', sans-serif;
-	color: #fff;
 	position: relative;
 }
 
@@ -12,6 +11,7 @@ body {
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
+	color: #fff;
 }
 
 main {
@@ -19,7 +19,7 @@ main {
 }
 
 @media (min-width: 600px) {
-	.banner {
+	#banner {
 		padding-top: 10vh;
 	}
 
@@ -31,16 +31,39 @@ main {
 	}
 }
 
-.banner {
+#banner {
 	min-height: 100vh;
 	padding: 30px auto 50px;
 }
 
+#banner .card-content {
+	padding-bottom: 0;
+}
 
-.banner .card h1 {
+#banner .card-content > * {
 	font-family: 'Montserrat', sans-serif;
+	display: block;
+	color: #000;
+}
+
+#banner .card-content h1 {
 	margin-top: 10px;
 	font-size: 36px;
+}
+
+#banner .card-content h3 {
+	margin-top: 10px;
+	font-size: 24px;
+}
+
+#banner .card-content a {
+	display: inline-block;
+	margin: 15px 5px auto;
+}
+
+#banner .card-content i {
+	color: #000;
+	font-size: 1.7em;
 }
 
 .sidebox {
@@ -88,7 +111,6 @@ main {
 }
 
 @media (max-width: 600px) {
-	.banner p,
 	.inspiration {
 		font-size: 16px;
 	}
