--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -10,6 +10,7 @@
 body {
 	display: flex;
 	min-height: 100vh;
+	width: 100%;
 	flex-direction: column;
 	color: #fff;
 }
@@ -21,6 +22,14 @@ main {
 @media (min-width: 600px) {
 	#banner {
 		padding-top: 10vh;
+	}
+
+
+	@media (max-width: 992px) {
+		#banner .card {
+			max-width: 50%;
+			margin: 0 auto;
+		}		
 	}
 
 	.valign {
@@ -108,6 +117,29 @@ main {
 	color: #03a9f4;
 }
 
+#skillsList,
+#inspirations, {
+	display: flex;
+	overflow: hidden;
+	flex-wrap: wrap;
+	align-items: stretch;
+	justify-content: center;
+}
+
+.tech-skill {
+	flex: 1;
+	height: 10vh;
+	margin: 10px;
+}
+
+@media (min-width: 600px) {
+	@media (max-width: 992px) {
+		.tech-skill {
+			height: 7vh;
+		}
+	}
+}
+
 .collapsible-body .video-container {
 	margin: 5px auto;
 }
@@ -124,15 +156,6 @@ main {
 	.collapsible {
 		font-size: 20px;
 	}
-}
-
-#inspirations {
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	overflow: hidden;
-	flex-wrap: wrap;
-	align-items: stretch;
 }
 
 #inspirations .col {
