--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,244 +1,228 @@
 * {
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-ms-box-sizing:border-box;
-	box-sizing:border-box;
-	font-family: 'Open Sans', sans-serif;
-	position: relative;
+  position: relative;
 }
-
 body {
-	display: flex;
-	min-height: 100vh;
-	width: 100%;
-	flex-direction: column;
-	color: #fff;
+  display: flex;
+  min-height: 100vh;
+  width: 100%;
+  flex-direction: column;
 }
-
 main {
-	flex: 1 0 auto;
+  flex: 1 0 auto;
 }
-
-@media (min-width: 600px) {
-	#banner {
-		padding-top: 10vh;
-	}
-
-
-	@media (max-width: 992px) {
-		#banner .card {
-			max-width: 50%;
-			margin: 0 auto;
-		}		
-	}
-
-	.valign {
-		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
-		width: 100%;
-	}
+.valign {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
-
+.halign {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+body {
+  color: #fff;
+}
 #banner {
-	min-height: 100vh;
-	padding: 30px auto 50px;
+  padding: 30px auto 50px;
+  min-height: 100vh;
 }
-
+@media (min-width: 600px) {
+  #banner {
+    padding-top: 10vh;
+  }
+  #banner > div {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
 #banner .card-content {
-	height: 100%;
+  height: 100%;
 }
-
 #banner .card-content > * {
-	font-family: 'Montserrat', sans-serif;
-	display: block;
-	color: #000;
+  font-family: 'Montserrat', sans-serif;
+  display: block;
+  color: #000;
 }
-
 #banner .card-content h1 {
-	margin-top: 10px;
-	font-size: 36px;
+  margin-top: 10px;
+  font-size: 36px;
 }
-
 #banner .card-content h3 {
-	margin-top: 10px;
-	font-size: 24px;
+  margin-top: 10px;
+  font-size: 24px;
 }
-
 #banner .card-content div {
-	position: absolute;
-	bottom: 0;
-	margin-bottom: 3%;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3%;
 }
-
 #banner .card-content a {
-	display: inline-block;
-	margin: auto 5px;
+  display: inline-block;
+  margin: auto 5px;
 }
-
 #banner .card-content i {
-	color: #000;
-	font-size: 1.7em;
+  color: #000;
+  font-size: 1.7em;
 }
-
+@media (min-width: 600px) and (max-width: 992px) {
+  #banner .card {
+    max-width: 60%;
+    margin: 0 auto;
+  }
+}
 .sidebox {
-	padding-top: 30px;
-	padding-left: 40px;
+  padding-top: 30px;
+  padding-left: 40px;
 }
-
 .sidebox a {
-	display: block;
-	margin: 5px auto;
-	min-width: 100px;
+  display: block;
+  margin: 5px auto;
+  min-width: 100px;
 }
-
 .parallax-container {
-	height: 400px;
+  height: 400px;
 }
-
 .thing a:link {
-	color: #000;
+  color: #000;
 }
-
 .section-header,
 .collapsible-header {
-	font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
-
+@media (max-width: 600px) {
+  .collapsible {
+    font-size: 20px;
+  }
+}
 .collapsible .collapsible-body {
-	padding: 5px 30px 30px;
+  padding: 5px 30px 30px;
 }
-
-.collapsible-body * {
-	color: #000;
+.collapsible .collapsible-body * {
+  color: #000;
 }
-
-.collapsible-body a {
-	color: #03a9f4;
+.collapsible .collapsible-body a {
+  color: #03a9f4;
 }
-
-#skillsList,
-#inspirations, {
-	display: flex;
-	overflow: hidden;
-	flex-wrap: wrap;
-	align-items: stretch;
-	justify-content: center;
+.collapsible .collapsible-body .video-container {
+  margin: 5px auto;
 }
-
-.tech-skill {
-	flex: 1;
-	height: 10vh;
-	margin: 10px;
-}
-
-@media (min-width: 600px) {
-	@media (max-width: 992px) {
-		.tech-skill {
-			height: 7vh;
-		}
-	}
-}
-
-.collapsible-body .video-container {
-	margin: 5px auto;
-}
-
 .page-section {
-	margin-bottom: 60px;
+  margin-bottom: 60px;
 }
-
-@media (max-width: 600px) {
-	.inspiration {
-		font-size: 16px;
-	}
-	
-	.collapsible {
-		font-size: 20px;
-	}
+#skillsList,
+#inspirations,
+display: flex {
+  overflow: hidden;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
 }
-
-#inspirations .col {
-	margin: 10px auto;
+.tech-skill {
+  flex: 1;
+  height: 10vh;
+  margin: 10px;
 }
-
 @media (min-width: 600px) {
-	#inspirations .col {
-		flex: 1;
-	}
+  .tech-skill {
+    height: 7vh;
+  }
 }
-
+#inspirations .col {
+  margin: 10px auto;
+}
+@media (min-width: 600px) {
+  #inspirations .col {
+    flex: 1;
+  }
+}
 .inspiration {
-	height: 100%;
+  height: 100%;
 }
-
-.thing {
-	width: 200px;
+@media (max-width: 600px) {
+  .inspiration {
+    font-size: 16px;
+  }
 }
-
 #thingBox {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
+.thing {
+  width: 200px;
+}
 #music {
-	height: 100px;
+  height: 100px;
 }
-
 #music iframe {
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 80%;
-	max-width: 500px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 500px;
 }
-
 @media (max-width: 600px) {
-	#video {
-		height: 250px;
-	}	
+  #video {
+    height: 250px;
+    margin-bottom: -100px;
+  }
 }
-
+@media (min-width: 600px) {
+  #video {
+    height: 550px;
+    margin-bottom: -250px;
+  }
+}
 @media (min-width: 992px) {
-	#video {
-		height: 550px;
-	}	
+  #video {
+    margin-bottom: 0;
+  }
 }
-
 #video video {
-	width: 100vw;
+  width: 100vw;
 }
-
 #contacts {
-	min-height: 600px;
+  height: 100vh;
+  min-height: 600px;
 }
-
+#contacts > div {
+  width: 100%;
+}
 #contacts img {
-	width: 80px;
-	border-radius: 50%;
+  width: 80px;
+  border-radius: 50%;
 }
-
-#resumeLink {
-	margin: 30px auto;
-	position: relative;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 180px;
-}
-
-#FAB {
-	bottom: 120px;
-}
-
-#scrollToTopFAB i {
-	line-height: 50px;
-}
-
-footer p {
-	line-height: 60px;
-}
-
 @media (max-width: 600px) {
-	footer p {
-		line-height: 30px;
-	}
+  #contacts img {
+    width: 60px;
+  }
+}
+#resumeLink {
+  margin: 30px auto;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 180px;
+}
+#FAB {
+  bottom: 120px;
+}
+#scrollToTopFAB i {
+  line-height: 50px;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+footer p {
+  line-height: 60px;
+}
+@media (max-width: 600px) {
+  footer p {
+    line-height: 30px;
+  }
 }
