--- a/app/css/styles.styl
+++ b/app/css/styles.styl
@@ -1,10 +1,11 @@
 @import "base"
 
 *
+	position: relative
 	font-family: 'Open Sans', sans-serif
 	
 body	
-	color: #fff 		
+	color: white
 
 #banner
 	padding: 30px auto 50px
@@ -24,13 +25,13 @@ body
 		& > *
 			font-family: 'Montserrat', sans-serif
 			display: block
-			color: #000
+			color: black
 		h1
 			margin-top: 10px
-			font-size: 36px
+			font-size: 2em
 		h3
 			margin-top: 10px
-			font-size: 24px
+			font-size: 1.6em
 		div
 			position: absolute
 			bottom: 0
@@ -39,7 +40,7 @@ body
 			display: inline-block
 			margin: auto 5px
 		i
-			color: #000
+			color: black
 			font-size: 1.7em
 
 .sidebox
@@ -54,18 +55,17 @@ body
 	height: 400px
 
 .thing a:link
-	color: #000
+	color: black
 
 .section-header, .collapsible-header
 	font-family: 'Montserrat', sans-serif
 
 .collapsible
-	@media widthMobileOnly
-		font-size: 20px
+	font-size: 1.2em
 	.collapsible-body
 		padding: 5px 30px 30px
 		*
-			color: #000
+			color: black
 		a
 			color: #03a9f4
 		.video-container
@@ -73,43 +73,28 @@ body
 
 .page-section
 	margin-bottom: 60px
-	
-#skillsList, #inspirations,
-	display: flex
-	overflow: hidden
-	flex-wrap: wrap
-	align-items: stretch
-	justify-content: center
 
 .tech-skill
-	flex: 1
 	height: 10vh
 	margin: 10px
 	@media widthTabletOnly
 		height: 7vh
 
-#inspirations .col
-	margin: 10px auto
-	@media widthTabletUp
-		flex: 1
-
 .inspiration
-	height: 100%
-	@media widthMobileOnly
-		font-size: 16px
+	margin: 10px auto
+	font-size: 1.2em
 
 #thingBox
 	margin-bottom: 20px
 
 .thing
 	width: 200px
+	span
+		font-size: 1.5em
 
 #music
 	height: 100px
 	iframe
-		position: absolute
-		left: 50%
-		transform: translateX(-50%)
 		width: 80%
 		max-width: 500px
 
@@ -146,14 +131,9 @@ body
 #FAB
 	bottom: 120px
 
-#scrollToTopFAB i
-	line-height: 50px
-
 footer
 	position: absolute
 	bottom: 0
 	width: 100%
 	p
-		line-height: 60px	
-		@media widthMobileOnly
-			line-height: 30px
+		line-height: 2.4em
