--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -141,9 +141,69 @@ body {
     height: 7vh;
   }
 }
-.inspiration {
-  margin: 10px auto;
+@media (min-width: 992px) {
+  #projectBox {
+    display: grid;
+    grid-template-columns: 30% 40% 30%;
+    grid-template-rows: 50% 50%;
+    grid-template-areas: "first second fourth" "first third fourth";
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}
+#project-1 {
+  display: block;
+  grid-area: first;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-align: center;
+}
+#project-1 img {
+  height: 400px;
+}
+#project-2 {
+  display: block;
+  grid-area: second;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-align: center;
+}
+#project-2 img {
+  height: 190px;
+}
+#project-3 {
+  display: block;
+  grid-area: third;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-align: center;
+}
+#project-3 img {
+  height: 190px;
+}
+#project-4 {
+  display: block;
+  grid-area: fourth;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-align: center;
+}
+#project-4 img {
+  height: 400px;
+}
+@media (min-width: 600px) {
+  #inspirations {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-column-gap: 10px;
+  }
+}
+#inspirations .card-panel {
   font-size: 1.2em;
+}
+#inspirations .card-panel span {
+  text-align: center;
 }
 #thingBox {
   margin-bottom: 20px;
