--- a/app/css/styles.styl
+++ b/app/css/styles.styl
@@ -99,6 +99,7 @@ for order, i in orders
 		display: block
 		grid-area: order
 		align-self: center
+		justify-self: center
 		text-align: center
 
 #inspirations
