--- a/app/css/base.styl
+++ b/app/css/base.styl
@@ -1,8 +1,8 @@
-widthMobileOnly = '(max-width: 600px)'
-widthTabletUp = '(min-width: 600px)'
-widthTabletDown = '(max-width: 992px)'
-widthTabletOnly = widthTabletUp, widthTabletDown
-widthDesktopOnly = '(min-width: 992px)'
+MobileOnly = '(max-width: 600px)'
+TabletUp = '(min-width: 600px)'
+TabletDown = '(max-width: 992px)'
+TabletOnly = '(min-width: 600px) and (max-width: 992px)'
+DesktopOnly = '(min-width: 992px)'
 
 body
 	display: flex
