Added @extend to grid.styl

--- a/app/css/grid.styl
+++ b/app/css/grid.styl
@@ -13,9 +13,7 @@
 		max-width: 960px
 
 .row:before, .row:after
-	content: ""
-	display: block
-	clear: both
+	@extend .clearfix:after
 
 .col
 	float: left
