Fixed link in source files

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,7 +57,7 @@ html(lang="en")
 								i.material-icons.left chat_bubble
 								span Contact Me
 						.col.s12.m6
-							a.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="Nico_Salvador-CV2017.pdf")
+							a.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="./files/Nico_Salvador-CV2017.pdf")
 								i.material-icons.left library_books
 								span Resum&#233;
 
@@ -222,7 +222,7 @@ html(lang="en")
 							+imgLink("https://www.pinterest.com/roller4life/", "pinterest", "Pinterest")
 
 					.row
-						a#resumeLink.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="files/Nico_Salvador-CV2017.pdf")
+						a#resumeLink.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="./files/Nico_Salvador-CV2017.pdf")
 							i.material-icons.left library_books
 							span Resum&#233;
 
