Adjusted quick contact links in banner

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -34,12 +34,14 @@ html(lang="en")
 							h1 Nico Salvador
 							h3 Quezon City, Philippines
 							.center-align
+								a(href="mailto:salvador.nico@gmail.com")
+									i.fa.fa-envelope(aria-hidden="true")
 								a(href="https://github.com/salvadornico")
 									i.fa.fa-github(aria-hidden="true")
 								a(href="https://www.linkedin.com/in/salvadornico")
 									i.fa.fa-linkedin(aria-hidden="true")
 								a(href="https://www.facebook.com/salvador.nico")
-									i.fa.fa-facebook(aria-hidden="true")
+									i.fa.fa-facebook-official(aria-hidden="true")
 
 				.col.s12.l7.sidebox
 					.row
