Replaced logos with SVGs

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -84,20 +84,20 @@ html(lang="en")
 										I'm well-versed in HTML, CSS, Javascript, jQuery, PHP, Laravel, Git, and mySQL for the web. My preferred stack also includes Pug, Stylus, and Gulp. I also know a bit of Java for Android, and am currently learning Kotlin, Python, and webpack.
 
 									.row.center-align#skillsList
-										+techSkill("HTML", "html5.png")
-										+techSkill("CSS", "css3.png")
+										+techSkill("HTML", "html5.svg")
+										+techSkill("CSS", "css3.svg")
 										+techSkill("Pug", "pug.svg")
 										+techSkill("Stylus", "stylus.png")
-										+techSkill("Javascript", "JS.png")
+										+techSkill("Javascript", "JS.svg")
 										+techSkill("jQuery", "jquery.png")
-										+techSkill("Gulp", "gulp.png")
-										+techSkill("PHP", "php.png")
+										+techSkill("Gulp", "gulp.svg")
+										+techSkill("PHP", "php.svg")
 										+techSkill("Laravel", "laravel.png")
 										+techSkill("Git", "git.png")
 										+techSkill("mySQL", "mysql.png")
 										+techSkill("Java", "java.png")
 										+techSkill("Android", "android.png")
-										+techSkill("Kotlin", "kotlin.png")
+										+techSkill("Kotlin", "kotlin.svg")
 										+techSkill("Python", "python.png")
 										+techSkill("webpack", "webpack.svg")
 
