Fixed broken link to JS logo

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -88,7 +88,7 @@ html(lang="en")
 										+techSkill("CSS", "css3.svg")
 										+techSkill("Pug", "pug.svg")
 										+techSkill("Stylus", "stylus.png")
-										+techSkill("Javascript", "JS.svg")
+										+techSkill("Javascript", "js.svg")
 										+techSkill("jQuery", "jquery.png")
 										+techSkill("Gulp", "gulp.svg")
 										+techSkill("PHP", "php.svg")
