Fixed HTML minification in Gulp file

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -17,7 +17,7 @@ html(lang="en")
 		+scripts("https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 		+scripts("https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js")
 
-		// build:js js/main.min.js
+		// build:js(src) js/main.min.js
 		+scripts("js/google-analytics.js")
 		+scripts("js/smooth-scroll.js")
 		+scripts("js/scripts.js")
@@ -48,8 +48,7 @@ html(lang="en")
 						.col.s12
 							h2 Hi, I'm Nico.
 							p.
-								I'm into all sorts of things.<br>
-								Maybe we can work on something together?
+								I'm into all sorts of things.#[br]Maybe we can work on something together?
 							p.
 								I've always had a hard time picking what it is I'm most into over the course of my life. There are just so many awesome things out there in the world to be involved in, why just choose one? I believe that incredible things can come out of the most unlikely partnerships.
 							h3 Let's get in touch!
