--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,7 +11,7 @@ html(lang="en")
 		+styles("https://fonts.googleapis.com/css?family=Montserrat|Open+Sans")
 		+styles("https://fonts.googleapis.com/icon?family=Material+Icons")
 		+styles("https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css")
-		+styles("css/styles.css")
+		+styles("styles/styles.css")
 
 		+scripts("https://use.fontawesome.com/8a3d0f859b.js")
 		+scripts("https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
