Moved to Pug templates

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -1,10 +1,13 @@
 @require "partials/base"
 
+bodyColor = #3949ab
+
 *
 	position relative
 	font-family 'Open Sans', sans-serif
 	
 body	
+	background-color bodyColor
 	color white
 
 #banner
@@ -65,7 +68,7 @@ body
 		*
 			color black
 		a
-			color #03a9f4
+			color bodyColor
 		.video-container
 			margin 5px auto
 
