Added dancing caret to opening screen

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,8 +9,8 @@ block head
 	base(target="_blank")
 
 	+styles("https://fonts.googleapis.com/css?family=Montserrat|Open+Sans")
+	+styles("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
 	+styles("styles/styles.css")
-	+scripts("https://use.fontawesome.com/8a3d0f859b.js")
 	include partials/materialize
 
 	// build:js(src) js/main.min.js
