--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,5 +1,5 @@
-header#banner.container.row
-	div
+header#banner.container
+	.row
 		.col.s12.l5
 			.card.large.hoverable
 				.card-image
@@ -35,3 +35,5 @@ header#banner.container.row
 					a.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="./files/Nico_Salvador-CV2017.pdf")
 						i.material-icons.left library_books
 						span Resum&#233;
+			.row
+				a#seeMore.hvr-icon-hang.white-text(href="#things" target="_parent" data-scroll)
