--- a/src/views/partials/main.pug
+++ b/src/views/partials/main.pug
@@ -3,7 +3,7 @@ main
 		.parallax
 			img(src="images/header1.png" alt="Some sample Kotlin code I wrote")
 	
-	.section.container
+	#things.section.container
 		h3.center-align.section-header Things I've Dabbled In
 		.row.page-section
 			.col.s12
@@ -42,27 +42,27 @@ main
 									div
 										h2 What's That Edit?
 										p A site for sharing and indexing skate videos
-										a.btn.red.darken-1(href="http://whats-that-edit.herokuapp.com") Launch site
+										a.btn.red.darken-1(href="http://whats-that-edit.herokuapp.com") View
 								.carousel-item(href="#two!")
 									div
 										h2 Monoposto
 										p Formula 1 data visualisation site
-										a.btn.red.darken-1(href="http://salvadornico.x10host.com/f1vis") Launch site
+										a.btn.red.darken-1(href="http://salvadornico.x10host.com/f1vis") View
 								.carousel-item(href="#three!")
 									div
 										h2 Leather &amp; Turf
 										p A Philippines Football League club reference site
-										a.btn.red.darken-1(href="https://salvadornico.github.io/Tuitt/module-1/capstone1") Launch site
+										a.btn.red.darken-1(href="https://salvadornico.github.io/Tuitt/module-1/capstone1") View
 								.carousel-item(href="#four!")
 									div
 										h2 Brain Train
 										p.white-text A simple memory game
-										a.btn.red.darken-1(href="https://salvadornico.github.io/Brain-Train/web") Launch site
+										a.btn.red.darken-1(href="https://salvadornico.github.io/Brain-Train/web") View
 								.carousel-item(href="#five!")
 									div
 										h2 Rock Paper Scissors
 										p.white-text A basic Rock-Paper-Scissors-Lizard-Spock Android game
-										a.btn.red.darken-1(href="https://github.com/salvadornico/Rock-Paper-Scissors") View source
+										a.btn.red.darken-1(href="https://github.com/salvadornico/Rock-Paper-Scissors") Source
 
 					li
 						.collapsible-header.black-text#collapsible-2.
